k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ara-frontend
  labels:
    app: ara-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ara-frontend
  template:
    metadata:
      labels:
        app: ara-frontend
    spec:
      containers:
        - name: ara-frontend
          image: vexced17/ara_culture_frontend:3a3b95ee99602b57624406506e03d57333f46891
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
