k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ara-frontend
spec:
  selector:
    app: ara-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
